kubernetes/infra/monitoring/influxdb/app/service-external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service.json
apiVersion: v1
kind: Service
metadata:
  name: influxdb-external
  namespace: monitoring
  labels:
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: influxdb
spec:
  type: NodePort
  ports:
    - name: http
      port: 8086
      targetPort: 8086
      protocol: TCP
      nodePort: 30086
  selector:
    app.kubernetes.io/name: influxdb2
    app.kubernetes.io/instance: influxdb
