kubernetes/infra/monitoring/influxdb/app/service.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service.json
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb-internal
  namespace: monitoring
  labels:
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: influxdb
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8086
      targetPort: 8086
      protocol: TCP
  selector:
    app.kubernetes.io/name: influxdb2
    app.kubernetes.io/instance: influxdb
